<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity$PlaceholderFragment"
    android:background="@color/background_white">

    <RelativeLayout
        android:id="@+id/menuRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/menu_label"
            android:id="@+id/MenuText"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/groupListButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/list_of_groups_label"
            android:layout_below="@+id/MenuText"
            android:layout_centerHorizontal="true"
            android:onClick="groupListButton"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/eventsListButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/list_of_events_label"
            android:layout_below="@+id/groupListButton"
            android:onClick="eventListButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/menuLogoutRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/logout_label"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />
    </RelativeLayout>


</RelativeLayout>
