<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity$PlaceholderFragment"
    android:background="@color/background_white">

    <RelativeLayout
        android:id="@+id/GroupListRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/add_group_label"
            android:id="@+id/AddGroupText"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/GroupAddNameField"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_vertical"
            android:layout_centerHorizontal="true"
            android:hint="@string/group_name_label"
            android:inputType="text"
            android:maxLength="32"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#000"
            android:layout_below="@+id/AddGroupText"
            android:visibility="visible"
            android:layout_marginTop="50dp" />

        <EditText
            android:id="@+id/GroupAddDescField"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_vertical"
            android:layout_centerHorizontal="true"
            android:hint="@string/description_label"
            android:inputType="text"
            android:maxLength="32"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#000"
            android:layout_below="@+id/GroupAddNameField"
            android:visibility="visible" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/AddRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/ButtonAddGroup"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/add_label"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />
    </RelativeLayout>


</RelativeLayout>
