<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity$PlaceholderFragment"
    android:background="@color/background_white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:id="@+id/loginFieldsRelative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/usernameOrPasswordField"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center_vertical"
                android:layout_centerHorizontal="true"
                android:hint="@string/username_hint"
                android:inputType="textEmailAddress"
                android:maxLength="32"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#000"
                android:visibility="visible" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center_vertical"
                android:layout_centerHorizontal="true"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLength="32"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#000"
                android:layout_below="@+id/usernameOrPasswordField"
                android:visibility="visible" />
        </RelativeLayout>


        <Button
            android:id="@+id/loginUserButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/login_label"
            android:layout_below="@+id/loginFieldsRelative"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>


    </RelativeLayout>

</RelativeLayout>
